# -mcp-licitacoes-brasil

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  lint.yml
config/: apis_endpoints.yaml  development.yaml  production.yaml
data/: modalidades.json  orgaos_brasileiros.json
deployment/: Dockerfile  README.md  backup.sh  deploy.sh  mcp-licitacoes.service
docs/: README.md  api_reference.md  faq.md  tutorial.md
examples/: README.md  basic_usage.py
scripts/: install.bat  install.sh
src/: config.py  main.py
src/api/: pncp.py
src/cache/: memory_cache.py  redis_cache.py
src/models/: fornecedor.py  orgao.py
src/tools/: alerta_licitacoes.py  buscar_cnpj.py  buscar_licitacoes.py  detalhes_licitacao.py  estatisticas.py  exportar_excel.py  listar_orgaos.py
src/utils/: logger.py  metrics.py  notify.py  sentry.py
tests/: test_api_pncp.py  test_buscar_cnpj.py  test_buscar_licitacoes.py  test_detalhes_licitacao.py  test_estatisticas.py  test_integration_end_to_end.py  test_listar_orgaos.py
