[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-licitacoes-brasil"
version = "1.0.0"
description = "Servidor MCP para consulta de licitações governamentais brasileiras"
authors = [{name = "Seu Nome", email = "seu@email.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "mcp>=0.1.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
mcp-licitacoes = "src.main:main" 